--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,12 @@ dependencies {
     testImplementation 'org.junit.platform:junit-platform-runner:1.1.0-M1'
     testImplementation 'org.junit.platform:junit-platform-launcher:1.1.0-M1'
     testImplementation 'org.mockito:mockito-core:2.13.0'
+
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    compile 'com.github.bumptech.glide:glide:3.8.0'
 }
